tests/baselines/reference/grammarAmbiguities1.errors.txt
tests/cases/compiler/grammarAmbiguities1.ts(8,1): error TS2554: Expected 1 arguments, but got 2.
tests/cases/compiler/grammarAmbiguities1.ts(8,3): error TS2365: Operator '<' cannot be applied to types '<T, U>(x: 任意) => 任意' and '类为 A'.
tests/cases/compiler/grammarAmbiguities1.ts(8,10): error TS2365: Operator '>' cannot be applied to types '类为 B' and '数字'.
tests/cases/compiler/grammarAmbiguities1.ts(9,1): error TS2554: Expected 1 arguments, but got 2.
tests/cases/compiler/grammarAmbiguities1.ts(9,3): error TS2365: Operator '<' cannot be applied to types '<T, U>(x: 任意) => 任意' and '类为 A'.
tests/cases/compiler/grammarAmbiguities1.ts(9,10): error TS2365: Operator '>' cannot be applied to types '类为 B' and '数字'.


==== tests/cases/compiler/grammarAmbiguities1.ts (6 errors) ====
    class A { foo() { } }
    class B { bar() { }}
    function f(x) { return x; }
    function g<T, U>(x) { return f(x); }
    g<A, B>(7)
    
    f(g<A, B>(7));
    f(g < A, B > 7);
    ~~~~~~~~~~~~~~~
!!! error TS2554: Expected 1 arguments, but got 2.
      ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '<T, U>(x: 任意) => 任意' and '类为 A'.
             ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types '类为 B' and '数字'.
    f(g < A, B > +(7));
    ~~~~~~~~~~~~~~~~~~
!!! error TS2554: Expected 1 arguments, but got 2.
      ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '<T, U>(x: 任意) => 任意' and '类为 A'.
             ~~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types '类为 B' and '数字'.
    